--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
   "devDependencies": {
     "@crowdstrike/commitlint": "^6.0.0",
     "eslint": "^8.0.0",
-    "eslint-config-crowdstrike": "^10.0.0",
-    "eslint-config-crowdstrike-node": "^3.0.0",
+    "eslint-config-crowdstrike": "10.0.0",
+    "eslint-config-crowdstrike-node": "3.0.0",
     "eslint-plugin-json-files": "2.1.0",
     "eslint-plugin-node": "^11.0.0",
     "remark-cli": "^11.0.0",
